--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,7 +1,34 @@
+*{
+    margin: 0px;
+    padding: 0px;
+}
+main{
+    width: 100vw ;
+    height: 100vh;
+    display: grid;
+    grid-template-columns: 25% 25% 10% 40%;
+    grid-template-rows: 80px 80px auto 100px;
+    grid-template-areas: "h h h h"
+    "s1 s1 s1 s2"
+    "s1 s1 s1 s2"
+    "s1 s1 s1 s2";
+
+
+}
+
+
 header{
-    background-color: black;
-    color: aliceblue;
+    background-color: rgb(248, 210, 210);
+    grid-area: h;
 }
-section{
-    background-color: blue;
+#section1{
+    background-color: #c7eef8;
+    grid-area: s1;
 }
+
+#section2{
+    background-color: #94b1b8;
+    grid-area: s2;
+
+}
+
