--- a/CSS/index.css
+++ b/CSS/index.css
@@ -22,12 +22,12 @@ header{
     grid-area: h;
 }
 #section1{
-    background-color: #f5f5f5;
+    background-color: #6e6b5579;
     grid-area: s1;
 }
 
 #section2{
-    background-color: #8b9e9e;
+    background-color: #76858ba6;
     grid-area: s2;
 
 }
@@ -60,3 +60,27 @@ button {
     border-style: solid;
 }
 
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 1; 
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+}
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 300px;
+    text-align: center;
+}
+
+button {
+    margin: 10px;
+}
