--- a/CSS/index.css
+++ b/CSS/index.css
@@ -18,17 +18,18 @@ main{
 
 
 header{
-    background-color: rgb(248, 210, 210);
+    background-color: #32c5ff80;
     grid-area: h;
 }
 #section1{
-    background-color: #6e6b5579;
+    background-color: #ffffff;
     grid-area: s1;
 }
 
 #section2{
-    background-color: #76858ba6;
+    background-color: #aae7ff80;
     grid-area: s2;
+    
 
 }
 #registro {
@@ -55,9 +56,10 @@ button {
 }
 
 #estudiantes{
-    border-width: 13px;
+    border-width: 4px;
     border-color: black;
     border-style: solid;
+    width: -webkit-fill-available;
 }
 
 .modal {
@@ -68,7 +70,7 @@ button {
     top: 0;
     width: 100%;
     height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: #00000080;
     justify-content: center;
     align-items: center;
 }
@@ -84,3 +86,9 @@ button {
 button {
     margin: 10px;
 }
+.txt{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    ;
+}
+
+
